<resources>
    <string name="app_name">My Kowel</string>
    <string name="welcome">Ласкаво просимо, ковельчанине</string>
    <string name="button_login">Увійти</string>
    <string name="button_reg">Зареєструватись</string>
    <string name="descriptionTwoPart">Увійди щоби отримати доступ до системи</string>
    <string name="descriptionOnePart">Помічник \"My Kovel\", радий тебе бачити Усе що тобі потрібно, відтепер у твоїй кишені Адже помічник створений спеціально для того, щоби ти мав усе необхідне в одному місці </string>

    <string name="content_description_image_hello">hello</string>
    <string name="content_description_image_registration">registration</string>
    <string name="content_description_image_login">registration</string>

    <string name="menu_text_main">Головна</string>
    <string name="menu_text_bazar">Базар</string>
    <string name="menu_text_news">Новини</string>
    <string name="menu_text_poster">Афіша подій</string>
    <string name="menu_text_telephone_book">Контакти</string>
    <string name="text_sign_in">Вхід</string>
    <string name="text_sign_up">Реєстрація</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="shared_preferences_user_data">dataAboutUser</string>
    <string name="txt_title_add_item_bazar">Нове</string>
    <string name="txt_title">Заголовок оголошення*</string>
    <string name="txt_description">Опис*</string>
    <string name="txt_price">Ціна</string>
    <string name="txt_select_category">Категорія*</string>
    <string name="content_description_account">Акаунт</string>
    <string name="account">Акаунт</string>

</resources>