<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cl.mykowel.fragments.home.NewsFragment"
        android:label="@string/menu_text_main"
        tools:layout="@layout/fragment_news_list" />

    <fragment
        android:id="@+id/navigation_bazar"
        android:name="com.cl.mykowel.fragments.bazar.BazarFragment"
        android:label="@string/menu_text_bazar"
        tools:layout="@layout/fragment_bazar_list" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.cl.mykowel.fragments.contact.ContactFragment"
        android:label="@string/menu_text_telephone_book"
        tools:layout="@layout/fragment_contact_list" />
    <fragment
        android:id="@+id/navigation_events"
        android:name="com.cl.mykowel.fragments.events.EventsFragment"
        android:label="@string/menu_text_poster"
        tools:layout="@layout/fragment_event_list" />
</navigation>