<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.authorization.AuthorizationActivity">

    <TextView

        android:id="@+id/textRegTextView"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/button_reg"
        android:textColor="@color/purple_500"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textYouHaveAccountTextView"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_sign_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:contentDescription="@string/content_description_image_login"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_logo_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText

            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_EditText"

            android:layout_marginHorizontal="20dp"

            android:background="@drawable/edit_text_border"
            android:drawableLeft="@drawable/selector_ic_login"
            android:drawablePadding="10dp"
            android:hint="Логин"
            android:inputType="text"

            android:paddingLeft="10dp"
            android:paddingRight="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogin">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_EditText"
            android:layout_marginHorizontal="20dp"

            android:background="@drawable/edit_text_border"
            android:drawableLeft="@drawable/selector_ic_password"

            android:drawablePadding="10dp"
            android:hint="Пароль"
            android:inputType="textPassword"

            android:paddingLeft="15dp"
            android:paddingRight="20dp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textYouHaveAccountTextView"
        android:layout_width="150dp"
        android:layout_height="19dp"
        android:text="Немаєте аккаунт?"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textRegTextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/round_button"
        android:onClick="PushToMainScreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegTextView"
        app:layout_constraintVertical_bias="0.492" />

</androidx.constraintlayout.widget.ConstraintLayout>