<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.reg.RegActivity">


    <TextView
        android:id="@+id/textSigIn_textView"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_sign_up"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSigIn_textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="30dp"

                android:contentDescription="@string/content_description_image_registration"
                app:layout_constraintBottom_toTopOf="@+id/loginEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_logo_img" />
            <!--            android:background="@drawable/edit_text_border"-->
            <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent">

                <EditText

                    android:id="@+id/loginRegEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_EditText"

                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/edit_text_border"
                    android:drawableLeft="@drawable/selector_ic_login"
                    android:drawablePadding="10dp"
                    android:hint="Логин"
                    android:inputType="text"

                    android:paddingLeft="10dp"
                    android:paddingRight="20dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText

                    android:id="@+id/nameRegEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_EditText"

                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/edit_text_border"
                    android:drawableLeft="@drawable/selector_ic_name"
                    android:drawablePadding="10dp"
                    android:hint="Ім'я"
                    android:inputType="text"

                    android:paddingLeft="10dp"
                    android:paddingRight="20dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText

                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_EditText"

                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/edit_text_border"
                    android:drawableLeft="@drawable/selector_ic_email"
                    android:drawablePadding="10dp"
                    android:hint="Електронна пошта"
                    android:inputType="textEmailAddress"

                    android:paddingLeft="10dp"
                    android:paddingRight="20dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/phone_numberEditText"

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_EditText"
                    android:layout_marginHorizontal="20dp"

                    android:background="@drawable/edit_text_border"
                    android:drawableLeft="@drawable/selector_ic_phone"
                    android:drawablePadding="10dp"
                    android:hint="Номер телефону "
                    android:maxLength="10"
                    android:inputType="phone"

                    android:paddingLeft="10dp"
                    android:paddingRight="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/passwordEditText"


                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_EditText"

                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/edit_text_border"
                    android:drawableLeft="@drawable/selector_ic_password"

                    android:drawablePadding="10dp"
                    android:hint="Пароль"


                    android:inputType="textPassword"

                    android:paddingLeft="10dp"
                    android:paddingRight="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textYouHaveAccountTextView"
                    android:layout_width="160dp"
                    android:layout_height="19dp"
                    android:text="Уже зареэстровані?"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textRegTextView"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

                <TextView
                    android:id="@+id/textRegTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/button_login"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textYouHaveAccountTextView"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/reg_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        android:onClick="RegUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>